--- a/Portifolio-HTML-e-CSS/Portifolio-HTML-e-CSS-Curso2-aula_5/styles/style.css
+++ b/Portifolio-HTML-e-CSS/Portifolio-HTML-e-CSS-Curso2-aula_5/styles/style.css
@@ -3,21 +3,34 @@
 *{
     margin: 0;
     padding: 0;
+    text-decoration: none;
 }
 
 body{
-    height: 100vh;
+    /* height: 100vh; */
     box-sizing: border-box;
     background-color: #000000;
     color: #F6F6F6;
 }
 
-.titulo-destaque{
+.cabecalho {
+    padding: 2% 0% 0% 15%;
+}
+
+.cabecalho__menu{
+    display: flex;
+    gap:80px;
+}
+
+.cabecalho__menu__link{
+    font-family: 'Montserrat', sans-serif;
+    font-size: 24px;
+    font-weight: 600;
     color: #22D4FD;
 }
 
 .apresentacao{
-    margin: 10% 15%;
+    padding: 5% 15%;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -32,6 +45,10 @@ body{
 .apresentacao__conteudo__titulo{
     font-size: 36px;
     font-family: 'Krona One', sans-serif;
+}
+
+.titulo-destaque{
+    color: #22D4FD;
 }
 
 .apresentacao__conteudo__texto{
@@ -51,11 +68,17 @@ body{
     font-family: 'Krona One', sans-serif;
     font-weight: 400;
     font-size: 24px;
-    
+}
+
+.apresentacao__links__subtitulo:hover {
+    color: red;
 }
 
 .apresentacao__links__link{
     /*background-color: #22D4FD;*/
+    display: flex;
+    justify-content: center;
+    gap: 16px;
     width: 378px;
     text-align: center;
     border: 2px solid #22D4FD;
@@ -66,4 +89,18 @@ body{
     text-decoration: none;
     color: #F6F6F6;
     font-family: 'Montserrat', sans-serif;
+}
+
+.apresentacao__links__link:hover {
+    background-color: #272727;
+}
+
+.rodape{
+    padding: 24px;
+    color: #000000;
+    background-color: #22D4FD;
+    text-align: center;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 24px;
+    font-weight: 400;
 }
