--- a/Portifolio-HTML-e-CSS/myPortifolio/style.css
+++ b/Portifolio-HTML-e-CSS/myPortifolio/style.css
@@ -21,6 +21,7 @@ body{
     display: flex;
     align-items: center;
     justify-content: space-between;
+    gap: 40px;
 }
 
 .principal__conteudo {
